# mahu-admin/mahu-admin-web/src/main/gen/cool/houge/mahu/admin/oas/vo/AdminLogType.java
@@ -14,6 +14,7 @@ public enum AdminLogType {
 
     ACCESS("ACCESS"),
     AUTH("AUTH"),
+    LOGIN_ATTEMPT("LOGIN_ATTEMPT"),
     CHANGE("CHANGE");
 
     private String value;
